# golang-updater

./: Cargo.toml  README.md
src/: config.rs  downloader.rs  installer.rs  main.rs  utils.rs
